add task update : update, validation, documentation
